docs/api/qiskit/0.39/qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver.mdx
---
title: NumPyMinimumEigensolver (v0.39)
description: API reference for qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver
---

# NumPyMinimumEigensolver

<Class id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/minimum_eigensolvers/numpy_minimum_eigensolver.py" signature="NumPyMinimumEigensolver(filter_criterion=None)" modifiers="class">
  Bases: [`qiskit.algorithms.minimum_eigensolvers.minimum_eigensolver.MinimumEigensolver`](qiskit.algorithms.minimum_eigensolvers.MinimumEigensolver "qiskit.algorithms.minimum_eigensolvers.minimum_eigensolver.MinimumEigensolver")

  The NumPy minimum eigensolver algorithm.

  **Parameters**

  **filter\_criterion** (*FilterType | None*) – callable that allows to filter eigenvalues/eigenstates. The minimum eigensolver is only searching over feasible states and returns an eigenstate that has the smallest eigenvalue among feasible states. The callable has the signature `filter(eigenstate, eigenvalue, aux_values)` and must return a boolean to indicate whether to consider this value or not. If there is no feasible element, the result can even be empty.

  ## Methods

  <span id="qiskit-algorithms-minimum-eigensolvers-numpyminimumeigensolver-compute-minimum-eigenvalue" />

  ### compute\_minimum\_eigenvalue

  <Function id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver.compute_minimum_eigenvalue" signature="NumPyMinimumEigensolver.compute_minimum_eigenvalue(operator, aux_operators=None)">
    Computes the minimum eigenvalue. The `operator` and `aux_operators` are supplied here. While an `operator` is required by algorithms, `aux_operators` are optional.

    **Parameters**

    *   **operator** (*BaseOperator |* [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.PauliSumOp")) – Qubit operator of the observable.
    *   **aux\_operators** (*ListOrDict\[BaseOperator |* [*PauliSumOp*](qiskit.opflow.primitive_ops.PauliSumOp "qiskit.opflow.primitive_ops.PauliSumOp")*] | None*) – Optional list of auxiliary operators to be evaluated with the parameters of the minimum eigenvalue main result and their expectation values returned. For instance in chemistry these can be dipole operators and total particle count operators, so we can get values for these at the ground state.

    **Return type**

    [NumPyMinimumEigensolverResult](qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult "qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolverResult")

    **Returns**

    A minimum eigensolver result.
  </Function>

  <span id="qiskit-algorithms-minimum-eigensolvers-numpyminimumeigensolver-supports-aux-operators" />

  ### supports\_aux\_operators

  <Function id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver.supports_aux_operators" signature="NumPyMinimumEigensolver.supports_aux_operators()" modifiers="classmethod">
    Whether computing the expectation value of auxiliary operators is supported.

    If the minimum eigensolver computes an eigenvalue of the main `operator` then it can compute the expectation value of the `aux_operators` for that state. Otherwise they will be ignored.

    **Return type**

    `bool`

    **Returns**

    True if aux\_operator expectations can be evaluated, False otherwise
  </Function>

  ## Attributes

  ### filter\_criterion

  <Attribute id="qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver.filter_criterion">
    Returns the criterion for filtering eigenstates/eigenvalues.

    **Return type**

    FilterType | None
  </Attribute>
</Class>

